Get rid of getFirst method